ver.4.15.18 リソースをクラスパスに変更しました。